--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<meta name="keywords" content="html, css, javascript, jquery">
 		<meta name="author" content="">
 		
-		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="PRMLGG.github.io/images/favicon.ico">
 		
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="PRMLGG.github.io/css/style.css">
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -165,7 +165,7 @@
   </footer>
   </div>
   
-    <script src="js/scripts-dist.js"></script>
-    <script src="js/main.js"></script>
+    <script src="PRMLGG.github.io/js/scripts-dist.js"></script>
+    <script src="PRMLGG.github.io/js/main.js"></script>
 	</body>
 </html>
