--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			<div class="collapse navbar-collapse justify-content-md-center" id="prmlNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Apply</a>
 					</li>
 					
-						<a class="navbar-brand desktop" href="#">
+						<a class="navbar-brand desktop" href="/">
 							<img class="siteLogo" src="images/logoColor.png">
 						</a>
 					
@@ -45,7 +45,7 @@
 						<a class="nav-link" href="#">Sales</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">Our Team</a>
+						<a class="nav-link" href="/team">Our Team</a>
 					</li>
 				</ul>
 			</div>
