--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
   </footer>
   </div>
   
+	    <!-- Loader -->
+    <div id="oz-site-overlayer"></div>
+    <div class="site-loader-wrap">
+      <div class="site-loader"></div>
+    </div>
+	
     <script src="js/scripts-dist.js"></script>
     <script src="js/main.js"></script>
 	</body>
