--- a/team.html
+++ b/team.html
@@ -290,7 +290,7 @@
 	</div>
 		
 		<div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="ozAnim1 d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <p class="col-md-4 mb-0">© 2022 PRML</p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
@@ -303,8 +303,8 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Armory</a></li>
     </ul>
   </footer>
-  </div>
-		    <script src="js/scripts-dist.js"></script>
-    <script src="js/main.js"></script>
-	</body>
+</div>
+	<script src="js/scripts-dist.js"></script>
+	<script src="js/main.js"></script>
+</body>
 </html>
