--- a/team.html
+++ b/team.html
@@ -259,7 +259,7 @@
 			<div class="col-sm">
 				<div class="card">
 					<div class="card-body">
-					<h3 class="card-title druid">Kura</h3>
+					<h3 class="card-title paladin">Kura</h3>
 					<h5 class="card-subtitle legendary">Raider</h5>
 					<p class="card-text">Healer</p>
 					</div>
@@ -298,7 +298,7 @@
 			<div class="col-sm">
 				<div class="card">
 					<div class="card-body">
-					<h3 class="card-title druid">Toad</h3>
+					<h3 class="card-title mage">Toad</h3>
 					<h5 class="card-subtitle legendary">Raider</h5>
 					<p class="card-text">Damage / Tank</p>
 					</div>
@@ -334,7 +334,7 @@
 			<div class="col-sm">
 				<div class="card">
 					<div class="card-body">
-					<h3 class="card-title hunter">Dchilz</h3>
+					<h3 class="card-title demonhunter">Dchilz</h3>
 					<h5 class="card-subtitle legendary">Raider</h5>
 					<p class="card-text">Damage</p>
 					</div>
@@ -412,7 +412,7 @@
 			<div class="col-sm">
 				<div class="card">
 					<div class="card-body">
-					<h3 class="card-title paladin">Goldenboy</h3>
+					<h3 class="card-title">Goldenboy</h3>
 					<h5 class="card-subtitle legendary">Backup Raider</h5>
 					<p class="card-text">Damage</p>
 					</div>
@@ -430,7 +430,7 @@
 			<div class="col-sm">
 				<div class="card">
 					<div class="card-body">
-					<h3 class="card-title mage">you!</h3>
+					<h3 class="card-title druid">you!</h3>
 					<h5 class="card-subtitle epic">Trial</h5>
 					<p class="card-text">Damage</p>
 					</div>
