--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Warcraftlogs</a></li>
+      <li class="nav-item"><a href="https://www.warcraftlogs.com/guild/id/671130" class="nav-link px-2 text-muted">Warcraftlogs</a></li>
       <li class="nav-item"><a href="https://raider.io/guilds/us/area-52/PRML" class="nav-link px-2 text-muted">Raider.IO</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Armory</a></li>
+      <li class="nav-item"><a href="https://worldofwarcraft.com/en-us/guild/US/area-52/prml" class="nav-link px-2 text-muted">Armory</a></li>
     </ul>
   </footer>
   </div>
