--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <span class="number-wrap">
                   <span id="raidOne" class="number number-counter realmrank"></span>
                 </span>
-                <span class="counter-label">Fated Sepulcher of the First Ones</span>
+                <span class="counter-label">Vault of the Incarnates</span>
               </div>
             </div>
             <div class="col-4 col-sm-4 mb-5 mb-lg-0 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
@@ -289,7 +289,7 @@
                 <span class="number-wrap">
                   <span id="raidTwo" class="number number-counter usrank"></span>
                 </span>
-                <span class="counter-label">Fated Sanctum of Domination</span>
+                <span class="counter-label">Vault of the Incarnates</span>
               </div>
             </div>
             <div class="col-4 col-sm-4 mb-5 mb-lg-0 col-md- col-lg-4" data-aos="fade-up" data-aos-delay="200">
@@ -297,7 +297,7 @@
                 <span class="number-wrap">
                   <span id="raidThree" class="number number-counter worldrank"></span>
                 </span>
-                <span class="counter-label">Fated Castle Nathria</span>
+                <span class="counter-label">Vault of the Incarnates</span>
               </div>
             </div>
           </div>
